# playground

./: README.md
CTheHardWay/: DuffsDevice  DuffsDevice.c  PtoFun  StructsPointers  StructsPointers.c  dbg.h
C_C++recipes/: CCoroutine.h  CCoroutineEx.c  CCoroutines.c  myapp
Cpp17STLCookbook/: fold_expresions.cpp
LeetCode/DisjointSet/ConnectedComp/: connected.cpp
LeetCode/DisjointSet/GraphValidTree/: Utilc  validtree  validtree.cpp  validtree.h
LeetCode/DisjointSet/OptRankComp/: CMakeLists.txt  numberOfProv.cpp  optrank  optrank.cpp
LeetCode/DisjointSet/PathCompOptimization/: CMakeLists.txt  (+1 more)
LeetCode/DisjointSet/tests/: CMakeLists.txt  disjoint_set_test.cpp  disjoint_set_testdata.h
MasteringCpp17STL/: examples-ch2.cpp
boost/basic/: CMakeLists.txt  bboost.cpp
c_cpp_samples/c_coroutine/: Chapter3Crecipes.c
c_cpp_samples/concurrency/: CMakeLists.txt
c_cpp_samples/object_oriented/: namespaces_example.cpp
c_cpp_samples/pointers/: pointer_example.c
c_cpp_samples/socket/: client.c
cassie/: udpc.c  udps.c
docs/notes/: root.md
eigen/basic/: CMakeLists.txt  eigen.cpp
manim/: graph.py  scene.py
mujoco/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example.cpp  mExample
opencv/DFT/: CMakeLists.txt
opencv/FFT/: discrete_fourier_transform.cpp
opencv/ImgSequence/: CMakeLists.txt  imgsequence.cpp
opencv/ScanImgs/: CMakeLists.txt
opencv/Sobel/: CMakeLists.txt  sobel.cpp
opencv/kaleidoscope/: CMakeLists.txt  kal.cpp
opencv/mandelbort/: CMakeLists.txt
python/: yolo.ipynb
sdl/: joystick.cpp  joystick_example
(+7 files in other folders)
